<resources>
    <string name="app_name">GSED</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nk">Not Known</string>
    <string name="na">Not Applicable</string>
    <string name="length">Length</string>
    <string name="age">Age</string>
    <string name="other">Other</string>
    <string name="specify">Please specify other</string>
    <string name="dkn">Dont Know</string>
    <string name="measure">Measure</string>
    <string name="number">Number</string>
    <string name="name"> Name </string>
    <string name="end_interview">End Interview</string>
    <string name="nextSection">Next Section</string>
    <string name="save">Save</string>
    <string name="U01"> Worker code </string>
    <string name="U02"> DSS ID </string>
    <string name="U03"> Date filling the form </string>
    <string name="U03dd"> dd </string>
    <string name="U03mm"> mm </string>
    <string name="U03yyyy"> yyyy </string>
    <string name="U04"> Study site </string>
    <string name="U04a"> Bangladesh </string>
    <string name="U04b"> Pakistan-Karachi  </string>
    <string name="U04c"> Tanzania-Pemba </string>
    <string name="U05"> Child’s GSED ID </string>
    <string name="U06"> Mother’s name </string>
    <string name="U07"> Crown to rump length 1 (cm) (If ≥8 and &gt; 14 wks) </string>
    <string name="U08"> Crown to rump length 2 (cm) (If ≥8 and &gt; 14 wks) </string>
    <string name="U09"> Crown to rump length 3 (cm) (If ≥8 and &gt; 14 wks) </string>
    <string name="U10"> Biparietal diameter 1 (cm) (If ≥14 wks) </string>
    <string name="U11"> Biparietal diameter 2 (cm) (If ≥14 wks) </string>
    <string name="U12"> Biparietal diameter 3 (cm) (If ≥14 wks) </string>
    <string name="U13"> FEMUR length1 (cm) (If ≥14 wks) </string>
    <string name="U14"> FEMUR length 2 (cm) (If ≥14 wks) </string>
    <string name="U15"> FEMUR length 3 (cm) (If ≥14 wks) </string>
    <string name="U16"> Gestational age at ultrasound in COMPLETED WEEKS </string>
    <string name="U17"> Gestational age at ultrasound in EXTRA DAYS over completed weeks </string>
    <string name="U18"> Any other important finding relevant for the health of the mother or the fetus (e.g. no heartbeat or other reasons for referral). Specify. </string>
    <string name="ultrasound">ULTRASOUND</string>
    <string name="eligibility">ELIGIBILITY FORM</string>
    <string name="instruments">GSED INSTRUMENTS</string>
    <string name="short_form">SHORT FORM</string>
    <string name="long_form">LONG FORM</string>
    <string name="cs01"> Worker code </string>
    <string name="cs02"> DSS ID </string>
    <string name="cs0101aa"> [Site specific] </string>
    <string name="cs03"> Date filling the form </string>
    <string name="cs03dd"> DD </string>
    <string name="cs03mm"> MM </string>
    <string name="cs03yyyy"> YYYY </string>
    <string name="cs04"> Study site </string>
    <string name="cs0411"> Bangladesh </string>
    <string name="cs0417"> Pakistan-Karachi </string>
    <string name="cs0420"> Tanzania-Pemba </string>
    <string name="cs05"> Has the woman mother given her consent to be enrolled in the study? </string>
    <string name="cs05a"> yes </string>
    <string name="ph09"> no </string>
    <string name="cs06"> Enrolment cohort </string>
    <string name="cs0601"> ACT </string>
    <string name="cs0602"> Non ACT </string>
    <string name="cs07"> If ACT cohort, has mother given consent to access ACT study data? </string>
    <string name="cs07a"> yes </string>
    <string name="cs07b"> no </string>
    <string name="cs08"> Child’s GSED ID </string>
    <string name="cs08a"> Country ID </string>
    <string name="cs08b"> 1= ACT </string>
    <string name="cs08c"> 2= Non ACT </string>
    <string name="cs08d"> GSED enrolment number series </string>
    <string name="cs09"> Name of the child </string>
    <string name="cs10"> Mother’s name </string>
    <string name="cs11"> Father’s name </string>
    <string name="cs12"> Child’s gender </string>
    <string name="cs12a"> Male </string>
    <string name="cs12b"> Female </string>
    <string name="cs13"> Date of birth </string>
    <string name="cs13dd"> DD </string>
    <string name="cs13mm"> MM </string>
    <string name="cs13yyyy"> YYYY </string>
    <string name="cs14"> Child’s age (in days) </string>
    <string name="cs14a"> If child’s age > 41 months DO NOT proceed </string>
    <string name="cs15"> Which language is (name of the child) learning to speak at home? </string>
    <string name="cs16"> Is this the same language as the GSED translation? </string>
    <string name="cs161"> yes </string>
    <string name="cs162"> no </string>
    <string name="cs163"> if no, NOT eligible </string>
    <string name="cs17"> Are you (name of the child)’s primary caregiver? </string>
    <string name="cs171"> yes </string>
    <string name="cs172"> no </string>
    <string name="cs173"> if no, NOT eligible </string>
    <string name="cs18"> What is your relationship to (name of the child)? </string>
    <string name="cs1811"> Mother </string>
    <string name="cs1812"> Father </string>
    <string name="cs1813"> Grandmother </string>
    <string name="cs1814"> Grandfather </string>
    <string name="cs1815"> Other </string>
    <string name="cs19"> If "other”, please specify </string>
    <string name="cs20"> What is your age? </string>
    <string name="cs2088"> Don’\t Know = 88 </string>
    <string name="cs2088a"> If &gt; 18 years, NOT eligible </string>
    <string name="cs21"> What is your current occupation? </string>
    <string name="cs2111"> Government Job </string>
    <string name="cs2112"> Private Job </string>
    <string name="cs2113"> Self Employed </string>
    <string name="cs2114"> Farming Only </string>
    <string name="cs2115"> Daily Wage Earner </string>
    <string name="cs2116"> Other Work </string>
    <string name="cs2117"> Does Not Work </string>
    <string name="cs2199"> Not Applicable </string>
    <string name="cs22"> If occupation is "other work", specify </string>
    <string name="chh"> CHILD’S CHRONIC HEALTH/ NEURODEVELOPMENTAL DISABILITIES </string>
    <string name="ch01"> Is the child often unwell? </string>
    <string name="ch011"> yes </string>
    <string name="ch012"> no </string>
    <string name="ch018"> don’t know </string>
    <string name="ch02"> Has your child been diagnosed with a severe or chronic medical condition for which you visit regularly a doctor or a facility (including congenital birth defect, or chronic heart disease)? </string>
    <string name="ch021"> yes </string>
    <string name="ch022"> no </string>
    <string name="ch028"> don’t know </string>
    <string name="ch028a"> if yes, NOT eligible </string>
    <string name="ch03"> If yes, please specify </string>
    <string name="ch04"> Do you have any concerns that your child’s development is different than other children of the same age? </string>
    <string name="ch041"> yes </string>
    <string name="ch042"> no </string>
    <string name="ch043"> don’t know </string>
    <string name="ch043a"> if yes, NOT eligible </string>
    <string name="ch05"> If yes, which of the below concerns do you have? </string>
    <string name="ch06"> Compared with children of the same age, does the child have difficulty moving/walking? </string>
    <string name="ch061"> yes </string>
    <string name="ch062"> no </string>
    <string name="ch063"> don’t know </string>
    <string name="ch07"> Compared with children of the same age, does the child have difficulty learning to do new things? </string>
    <string name="ch071"> yes </string>
    <string name="ch072"> no </string>
    <string name="ch073"> don’t know </string>
    <string name="ch08"> Other (please specify) </string>
    <string name="ch09"> Has the child ever suffered from prolonged (>10 min) seizures or recurrent convulsions (more than 2 or 3 in a day on more than one occasion)? This does not include febrile convulsions </string>
    <string name="ch091"> yes </string>
    <string name="ch092"> no </string>
    <string name="ch093"> don’t know </string>
    <string name="ch10"> Compared with other children does the child have difficulty seeing, either in the daytime or at night?   </string>
    <string name="ch101"> yes </string>
    <string name="ch102"> no </string>
    <string name="ch103"> don’t know </string>
    <string name="ch11"> Compared with other children does the child have difficulty hearing? </string>
    <string name="ch111"> yes </string>
    <string name="ch112"> no </string>
    <string name="ch113"> don’t know </string>
    <string name="mh"> MATERNAL HEALTH </string>
    <string name="m01"> Would you rate your health as being good overall? </string>
    <string name="m011"> Yes </string>
    <string name="m012"> No </string>
    <string name="m018"> Don’t Know </string>
    <string name="m02"> Do you have any diagnosed chronic conditions for which you visit a doctor or health facility on a regular basis? </string>
    <string name="m021"> Yes </string>
    <string name="m022"> No </string>
    <string name="m028"> Don’t Know </string>
    <string name="hh"> BACKGROUND DETAILS HOUSEHOLD </string>
    <string name="hh01"> Who is the head of your household? </string>
    <string name="hh0111"> Mother of baby </string>
    <string name="hh0112"> Father of baby </string>
    <string name="hh0113"> Grandmother of baby </string>
    <string name="hh0114"> Grandfather of baby </string>
    <string name="hh0115"> Other </string>
    <string name="hh02"> If "other”, please specify </string>
    <string name="hh03"> How many years of schooling did the child’s father or head of the household complete? </string>
    <string name="hh0300"> 00 to 25 </string>
    <string name="hh0399"> Not Applicable </string>
    <string name="hh0388"> Not Known </string>
    <string name="hh04"> What is the current occupation of the father or the head of the household? </string>
    <string name="hh0411"> government service </string>
    <string name="hh0412"> private service </string>
    <string name="hh0413"> daily wage earner </string>
    <string name="hh0414"> self employed </string>
    <string name="hh0415"> farming </string>
    <string name="hh0416"> does not work </string>
    <string name="hh0417"> other </string>
    <string name="hh0499"> not applicable </string>
    <string name="hh05"> If occupation of child’s father or head of the household is "other", specify </string>
    <string name="hh06"> Is child’s father currently living with the family? </string>
    <string name="hh061"> Yes </string>
    <string name="hh062"> No </string>
    <string name="hh069"> Not Applicable </string>
    <string name="hhes"> HOUSEHOLD SOCIO-ECONOMIC STATUS </string>
    <string name="hh07"> What is the main source of drinking water for members of your household? </string>
    <string name="hh0711"> piped water into the dwelling </string>
    <string name="hh0712"> public tap </string>
    <string name="hh0713"> Tube well or borehole or hand pump </string>
    <string name="hh0714"> Open well </string>
    <string name="hh0715"> closed well </string>
    <string name="hh0716"> Tanker truck </string>
    <string name="hh0717"> small cart with tank </string>
    <string name="hh0718"> Surface Water (River / Dam / Lake / Pond / Stream / Canal) </string>
    <string name="hh0719"> Bottled Water </string>
    <string name="hh0720"> Rain Water </string>
    <string name="hh0799"> Other </string>
    <string name="hh08"> If source of water is "other", specify </string>
</resources>