<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        style="@style/BackgroundStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/fldGrpSectionC01"
            style="@style/linerlayout_view_wt_bound">

            <!--01-->
            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout style="@style/linerlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/lorem" />

                    <RadioGroup
                        android:id="@+id/ques03"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/ques03a"
                            style="@style/radiobutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/yes" />

                        <RadioButton
                            android:id="@+id/ques03b"
                            style="@style/radiobutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/no" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--01-->
            <android.support.v7.widget.CardView style="@style/cardView">

                <LinearLayout style="@style/linerlayout_view_wt_bound">

                    <TextView
                        style="@style/i_textview"
                        android:text="@string/lorem" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            style="@style/radiobutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/yes" />

                        <RadioButton
                            style="@style/radiobutton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="1dp"
                            android:layout_weight="1"
                            android:text="@string/no" />

                    </RadioGroup>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>
</layout>
